# heisenberg

./: .gitignore  Cargo.toml  README.md  build.sh  dev.sh  gleam.toml  heisenberg.service  heisenberg_ui.desktop  manifest.toml  mise.toml  rust-toolchain.toml
deploy/: .Xresources  .bash_profile  .xinitrc
src/: config.rs  heisenberg.gleam  heisenberg_dev.gleam  main.rs  model.gleam  page.gleam  routes.gleam  state.rs  transit.rs  util.rs  view.gleam  view.rs  weather.rs
static/: index.html  styles.css
