[package]
name = "heisenberg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = "1.0.228"
serde_json = { version = "1.0.148", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false }
ureq = { version = "3.1.4", features = ["json"] }
